--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: auto;
     background-color: rgb(255, 255, 255); /* White background */
     padding: 10px 20px;
     box-shadow: 0px 2px 5px rgba(22, 41, 219, 0.1); /* Optional: Add a shadow */
@@ -52,4 +53,9 @@
   .navbar-right .login-button:hover {
     background-color: rgb(0, 60, 144) /* Darker blue on hover */
   }
-  
+
+.active-link {
+  text-decoration: underline;
+  text-underline-offset: 3px; /* Offset from the bottom */
+  color: #007bff; /* Change the color for the active link */
+}
