--- a/client/src/Pages/user.css
+++ b/client/src/Pages/user.css
@@ -1,3 +1,4 @@
+
 .return {
   background-color: rgb(0, 82, 195); /* Blue background color */
   color: white; /* White text color */
@@ -7,6 +8,9 @@
   cursor: pointer; /* Add a pointer cursor on hover */
   font-size: 16px; /* Adjust font size */
   text-align: center;
+}
+body{
+    background-color: rgb(236, 236, 236);
 }
 
 .center {
