--- a/client/src/Pages/Home.css
+++ b/client/src/Pages/Home.css
@@ -1,74 +1,87 @@
-.Home-container {
+.card-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
-  background-color: rgb(236, 236, 236);
-  gap: 100px;
-  border-radius: 20px;
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif, Geneva, Tahoma, sans-serif;
-}
-
-.stats-container {
+  justify-content: center;
+  min-height: 100vh;
   width: 100%;
-  border-width: 0.5rem;
-  border-radius: 20px;
-  border-style: double;
-  background-color: rgb(170, 211, 228);
-  height: 220px;
-  display: flex; /* Added this */
-  align-items: center;
-  justify-content: center;
+  height: 100%;
+  background-color: #f0f0f0; /* Background color for the page */
 }
 
-.content-box {
-  background-color: azure;
-  width: 50%;
-  border-radius: 20px;
-  border-width: 5px;
-  border-style: double;
+.card {
+  width: 300px;
+  height: 450px;
+  background-color: rgba(0, 0, 255, 0.1); /* Bluish tinge */
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin: 0 auto; /* Center horizontally */
 }
 
-.centered-content {
+.card-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100%; 
+  align-items: center;
 }
 
-.centered-content h3 {
-  margin: 0.5rem 0; 
+.card-back {
+  transform: rotateY(180deg);
 }
 
-.content-box {
-  background-color: azure;
-  width: 50%;
-  border-radius: 20px;
-  border-width: 5px;
-  border-style: double;
+h2 {
+  font-size: 1.5rem;
+  margin: 10px 0;
+}
+
+p {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0;
 }
 
 .buttons {
+  margin-top: 200px;
+  margin-bottom: 100px;
   display: flex;
-  gap: 10px; /* Space between buttons */
   justify-content: center;
-  margin-top: 20px; /* Adjust margin as needed */
-  margin-bottom: 20px;
 }
 
-.button {
+.add-button {
+  background-color: rgb(0, 60, 144);
+  color: #fff;
   padding: 10px 20px;
-  background-color: #8c9093;
-  color: white;
   border: none;
   border-radius: 5px;
+  font-size: 1rem;
+  margin: 0 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+  transition: transform 0.2s, box-shadow 0.2s;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
 
-.button:hover {
-  background-color: #278aee;
+.add-button:hover {
+  background-color: #0056b3;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
