--- a/client/src/Components/Footer.css
+++ b/client/src/Components/Footer.css
@@ -1,25 +1,34 @@
 /* Footer styles */
 .footer {
-    background-color: rgb(0, 82, 195); /* Blue background color */
-    color: white;
-    padding: 20px 30px; /* Add left and right padding */
-    width: 100%; /* Full width */
-    position: fixed; /* Fix the footer at the bottom */
+  background-color: rgb(0, 82, 195); /* Blue background color */
+  color: white;
+  padding: 20px 30px; /* Add left and right padding */
+  width: 100%; /* Full width */
+  position: fixed; /* Fix the footer at the bottom */
   bottom: 0; /* Stick it to the bottom of the viewport */
   left: 0; /* Fix the footer at the bottom */
-    display: flex;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center content horizontally */
+
+
+  gap: 10px;
+  text-align: center; 
+  font-size: 18px;
+}
+
+/* Social media icons */
+.social-icon {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  .footer {
     flex-direction: column; /* Stack children vertically */
-    align-items: center; /* Center content horizontally */
-  
-    /* Added these styles for spacing and alignment */
-    gap: 10px; /* Adjust the spacing between social icons and text */
+    font-size: 12px;
     text-align: center; /* Center-align the text */
   }
-  
-  /* Social media icons */
-  .social-icon {
-    font-size: 24px;
-    color: white;
-    text-decoration: none;
-  }
-  
+}
