--- a/client/src/Pages/Login.css
+++ b/client/src/Pages/Login.css
@@ -5,31 +5,28 @@
     height: 100vh;
     background-color: rgb(236, 236, 236);
     border-radius: 20px;
-    font-family:  'Open Sans', 'Helvetica Neue', sans-serif, Tahoma, sans-serif;
+    font-family:  'Poppins', 'Helvetica Neue', sans-serif, Tahoma, sans-serif;
   }
   .login-box {
     background-color: white;
     border: 1px solid #e6e6e6;
     width: 350px;
     text-align: center;
+    border: black solid;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   }
   
-  .instagram-logo {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
+
   
   .input-field {
     width: 100%;
     padding: 5px;
-    margin: 10px auto; 
+    margin: 12px auto; 
     border-radius: 20px;
-    border: 1px solid #dbdbdb;
+    border: 2px solid #dbdbdb;
     border-radius: 3px;
-    height: 30px;
+    height: 40px;
 
   }
   
@@ -40,7 +37,6 @@
     color: white;
     border: none;
     border-radius: 3px;
-    font-weight: bold;
     cursor: pointer;
   }
   
@@ -51,7 +47,7 @@
   .separator {
     display: flex;
     align-items: center;
-    margin: 20px 0;
+    margin: 25px 0;
   }
   
   .or-text {
