--- a/client/src/Pages/user.css
+++ b/client/src/Pages/user.css
@@ -1,4 +1,3 @@
-
 .return {
   background-color: rgb(0, 82, 195); /* Blue background color */
   color: white; /* White text color */
@@ -13,14 +12,6 @@ body{
     background-color: rgb(236, 236, 236);
 }
 
-.center {
-  text-align: center;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 .return:hover {
   background-color: #000000; /* Darker blue on hover */
 }
@@ -29,7 +20,7 @@ body{
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: 'Verdana','Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins','Open Sans', 'Helvetica Neue', sans-serif;
 }
 .user-profile-image {
   width: 100px; /* Adjust the width as needed */
@@ -49,6 +40,7 @@ body{
   background-color: #f7f7f7;
   align-items: center;
 }
+
 .user-name {
   font-size: 24px;
   margin: 0;
@@ -59,13 +51,15 @@ body{
 
 }
 .entry-label {
-  font-weight: bold;
+  font-weight:500;
+  color: #28344f;
 }
 .entry-value {
   margin-left: 10px;
 }
 input[type="text"] {
   width: 100%;
+  height: 50px;
   padding: 5px;
   margin: 5px 0;
   border: 1px solid #ccc;
@@ -80,6 +74,7 @@ input[type="text"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+
 }
 
 .edit-button:hover, .save-button:hover {
