--- a/client/src/Pages/ViewMachine.css
+++ b/client/src/Pages/ViewMachine.css
@@ -1,34 +1,43 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  margin: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-h1, h2 {
-  color: #007bff;
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+.search-input {
+  border: #333;
+  margin-bottom: 15px;
+}
+.inp{
+  border: #000000;
 }
 
 label {
-  margin-right: 10px;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
-input {
-  padding: 5px;
+.search-input input {
+  width: 30%;
+  height: auto;
+  margin: 20px;
+  padding: 5px; /* Adjust the padding to change the input size */
+  box-sizing: border-box;
+  border: #000000;
   margin-bottom: 10px;
 }
 
 button {
-  padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
+  padding: 10px 15px;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -36,20 +45,25 @@ button:hover {
   background-color: #0056b3;
 }
 
-.table {
+h2 {
+  text-align: center;
+  color: #333;
+  margin-top: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
   margin-top: 20px;
 }
 
 th, td {
-  padding: 10px;
+  border: 1px solid #ddd;
+  padding: 8px;
   text-align: left;
 }
 
 th {
   background-color: #007bff;
   color: #fff;
-}
-
-tbody tr:hover {
-  background-color: #f5f5f5;
 }
