--- a/client/src/Components/Footer.css
+++ b/client/src/Components/Footer.css
@@ -4,16 +4,16 @@
     color: white;
     padding: 20px 30px; /* Add left and right padding */
     width: 100%; /* Full width */
-    position: fixed; /* Fix the footer at the bottom */
+    position: relative; /* Fix the footer at the bottom */
     bottom: 0; /* Stick it to the bottom of the viewport */
     left: 0; /* Fix the footer at the bottom */
     display: flex;
     flex-direction: column; /* Stack children vertically */
     align-items: center; /* Center content horizontally */
-  
-  
     gap: 10px;
     text-align: center; 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
     font-size: 18px;
   }
   
