--- a/client/src/Pages/AddUser.css
+++ b/client/src/Pages/AddUser.css
@@ -5,7 +5,8 @@
     height: 100vh;
     background-color: rgb(236, 236, 236);
     border-radius: 20px;
-    font-family:  'Poppins', 'Helvetica Neue', sans-serif, Tahoma, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
   }
   .login-box {
     background-color: white;
