--- a/client/src/Pages/contact.css
+++ b/client/src/Pages/contact.css
@@ -25,7 +25,8 @@
     text-align: center;
     padding-top: 90px;
     font-weight: bold;
-    font-family: Poppins, Geneva, Tahoma, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .heading{
     text-align: center;
