--- a/client/src/Components/Footer.css
+++ b/client/src/Components/Footer.css
@@ -12,7 +12,7 @@
     align-items: center; /* Center content horizontally */
     gap: 10px;
     text-align: center; 
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
     font-size: 18px;
   }
