--- a/client/src/Pages/contact.css
+++ b/client/src/Pages/contact.css
@@ -1,8 +1,12 @@
+body{
+    font-family: 'Poppins';
+}
+
 .container.contact__container{
     width: 100%; /* Change the width to 100% for mobile devices */
     display: flex;
     flex-direction: column; /* Stack content vertically on smaller screens */
-    padding-top: 30px;
+    padding-top: 10px;
 }
 .contact .borderr{
     border: 2px solid black;
@@ -23,11 +27,11 @@
 }
 .title{
     text-align: center;
-    padding-top: 90px;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top: 40px;
+    font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+
 .heading{
     text-align: center;
     font-size: 1.8rem;
