--- a/client/src/Pages/AddUser.css
+++ b/client/src/Pages/AddUser.css
@@ -5,7 +5,7 @@
     height: 100vh;
     background-color: rgb(236, 236, 236);
     border-radius: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
   .login-box {
